--- a/05-Gestion Parking/Parking/Parking.csproj
+++ b/05-Gestion Parking/Parking/Parking.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="serilog" Version="4.3.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
     </ItemGroup>
 
 </Project>
