añade icono aplicacion

--- a/Prog. Orientada a Objetos/01-Gestion Equipo Futbol/Equipo Futbol/Equipo Futbol.csproj
+++ b/Prog. Orientada a Objetos/01-Gestion Equipo Futbol/Equipo Futbol/Equipo Futbol.csproj
@@ -6,12 +6,17 @@
         <RootNamespace>Equipo_Futbol</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ApplicationIcon>Images\app-icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Serilog" Version="4.3.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Structs\" />
     </ItemGroup>
 
 </Project>
