crea el objeto jugador junto a su estado y su comportamiento

--- a/Prog. Orientada a Objetos/01-Gestion Equipo Futbol/Equipo Futbol/Equipo Futbol.csproj
+++ b/Prog. Orientada a Objetos/01-Gestion Equipo Futbol/Equipo Futbol/Equipo Futbol.csproj
@@ -7,16 +7,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <ApplicationIcon>Images\app-icon.ico</ApplicationIcon>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Serilog" Version="4.3.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Structs\" />
     </ItemGroup>
 
 </Project>
