--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ Prog. Orientada a Objetos/02-Gestion 1º DAW/.idea/
 Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/bin/
 Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/obj/
 # Ejercicio POO 3
-Prog. Orientada a Objetos/03-Gestion Cine/.idea/
-Prog. Orientada a Objetos/03-Gestion Cine/Cine/bin/
-Prog. Orientada a Objetos/03-Gestion Cine/Cine/obj/
+Prog. Orientada a Objetos/03-Gestion Funkos/.idea/
+Prog. Orientada a Objetos/03-Gestion Funkos/Funko/bin/
+Prog. Orientada a Objetos/03-Gestion Funkos/Funko/obj/
