--- a/Prog. Orientada a Objetos/03-Gestion Funkos/Funko/Funko.csproj
+++ b/Prog. Orientada a Objetos/03-Gestion Funkos/Funko/Funko.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <ApplicationIcon>Images\app-icon.ico</ApplicationIcon>
+        <RootNamespace>Funko</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
