--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/bin/
 Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/obj/
 # Ejercicio POO 3
 Prog. Orientada a Objetos/03-Gestion Funkos/.idea/
-Prog. Orientada a Objetos/03-Gestion Funkos/Gestion/bin/
-Prog. Orientada a Objetos/03-Gestion Funkos/Gestion/obj/
+Prog. Orientada a Objetos/03-Gestion Funkos/Funko/bin/
+Prog. Orientada a Objetos/03-Gestion Funkos/Funko/obj/
