init gest banda

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ejercicio POO 2
-Prog. Orientada a Objetos/02-Gestion 1º DAW/.idea/
-Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/bin/
-Prog. Orientada a Objetos/02-Gestion 1º DAW/Gestion/obj/
-# Ejercicio POO 3
-Prog. Orientada a Objetos/03-Gestion Funkos/.idea/
-Prog. Orientada a Objetos/03-Gestion Funkos/Funko/bin/
-Prog. Orientada a Objetos/03-Gestion Funkos/Funko/obj/
+bin/
+obj/
+.idea/
