--- a/Prog. Orientada a Objetos/04-Gestion Banda Rock/Gestion/Gestion.csproj
+++ b/Prog. Orientada a Objetos/04-Gestion Banda Rock/Gestion/Gestion.csproj
@@ -5,6 +5,12 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ApplicationIcon>Images\app-icon.ico</ApplicationIcon>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="4.3.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    </ItemGroup>
 
 </Project>
