enums para gestion de opciones en los menus

--- a/Prog. Orientada a Objetos/04-Gestion Banda Rock/Gestion/Gestion.csproj
+++ b/Prog. Orientada a Objetos/04-Gestion Banda Rock/Gestion/Gestion.csproj
@@ -13,4 +13,14 @@
       <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Config\" />
+      <Folder Include="Factories\" />
+      <Folder Include="Models\" />
+      <Folder Include="Repositories\" />
+      <Folder Include="Services\" />
+      <Folder Include="Utils\" />
+      <Folder Include="Validators\" />
+    </ItemGroup>
+
 </Project>
